<resources>
    <string name="app_name">Tarea final</string>
    <string name="texto_inicial">Tus tareas, tu ritmo, tu éxito\n</string>
    <string name="start_app">EMPEZAR\n</string>
    <string name="todo">TODO</string>
    <string name="tarea">Tareas Pendientes</string>
    <string name="descripcion">Descripcion</string>
    <string name="prioritario">prioritario</string>
    <string name="fecha_fin">Fecha fin</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="progreso">Progreso</string>
    <string name="_0_d_as_restantes">0 días restantes</string>
    <string name="descripci_n_completa">Descripción completa</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="crear_tarea">Crear Tarea</string>
    <string name="editar_tarea">Editar tarea</string>
    <string name="txtTituloEditarTarea">Editar Tarea</string>
    <string name="idTitulo">Titulo</string>
    <string name="itFechaCreacion">Fecha de creacion</string>
    <string name="itFechaObjetivo">Fecha objetivo</string>
    <string name="itPrioritaria">Prioritaria</string>
    <string name="itdescripcion">Descripción</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnVolver">Volver</string>
    <string name="msgTareaGuardadaCorrectamente">Tarea guardada correctamente</string>
    <string name="msgTareaActualizada">Tarea Actualizada</string>
    <string name="msgLaDescripcionEstaVacia">La descripción está vacía</string>
    <string name="msgElTituloVacio">"El título está vacío"</string>
    <string name="msg_fecha_creacion_vacia">La fecha de creación está vacía</string>
    <string name="msg_fecha_objetivo_vacia">La fecha objetivo está vacía</string>
    <string name="cambiar_tema">Cambiar tema</string>
    <string name="no_hay_tareas">No hay tareas</string>
    <string name="prioritarias">Prioritarias</string>
    <string name="a_adir">Añadir</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="cambiar_idioma">Cambiar Idioma\n</string>
    <string name="preferencia">Preferencia</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="t_tulo_de_la_tarea">Título de la tarea</string>
    <string name="fecha_de_creaci_n">Fecha de creación</string>
    <string name="fecha_l_mite">Fecha límite</string>
    <string name="estado_inicial">Estado inicial</string>
    <string name="marcar_como_prioritaria">Marcar como prioritaria</string>
    <string name="cancelar">Cancelar</string>
    <string name="siguiente">Siguiente</string>
    <string name="descripci_n">Descripción</string>
    <string name="archivos_adjuntos">Archivos Adjuntos</string>
    <string name="adjuntar_documento">Adjuntar documento</string>
    <string name="adjuntar_imagen">Adjuntar imagen</string>
    <string name="adjuntar_audio">Adjuntar audio</string>
    <string name="adjuntar_video">Adjuntar video</string>
    <string name="ning_n_archivo_seleccionado">Ningún archivo seleccionado</string>
    <string name="resumen_general">Resumen General</string>
    <string name="_0">0</string>
    <string name="total">Total</string>
    <string name="pendientes">Pendientes</string>
    <string name="completadas">Completadas</string>
    <string name="prioritarias_point">Prioritarias:</string>
    <string name="progreso_promedio">Progreso Promedio:</string>
    <string name="_0porcent">0%</string>
    <string name="fecha_objetivo_promedio">Fecha Objetivo Promedio:</string>
    <string name="distribuci_n_de_progreso">Distribución de Progreso</string>
    <string name="estado_de_progreso">Estado de Progreso</string>
    <string name="adjuntos">Adjuntos</string>
    <string name="sin_archivos_adjuntos">Sin archivos adjuntos</string>
</resources>